// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dimmer when page=false Snapshot Content Dimmer 1`] = `
<body>
  .c0 {
  position: relative;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgba(46,53,56,0.9);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  vertical-align: middle;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 100;
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
    </div>
  </div>
</body>
`;

exports[`Dimmer when page=true Snapshot Page Dimmer  1`] = `
.c0 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgba(46,53,56,0.9);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  vertical-align: middle;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 100;
}

<body>
  <div>
    <div
      class="c0"
    />
  </div>
</body>
`;
